<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegEmail">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/TxRegEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/TxRegEmail"
            android:textColor="@color/btn_reg_tx"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BtnRegEmail_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="300dp"
            android:background="@color/btn_reg"
            android:text="@string/BtnRegEmail_1"
            android:textSize="35sp"
            android:textStyle="bold"
            android:onClick="RegAsEmail_1"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TxRegEmail_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="200dp"
            android:text="@string/TxRegEmail_1"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/EdtRegEmail_1_hin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:hint="@string/EdtRegEmail_1_hin"
            android:inputType="textWebEmailAddress"
            android:textSize="20sp"
            android:layout_marginLeft="30dp" />

        <TextView
            android:id="@+id/TxRegEmail_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="300dp"
            android:text="@string/TxRegEmail_2"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EdtRegEmail_2_hin"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="300dp"
            android:hint="@string/EdtRegEmail_2_hin"
            android:inputType="textPassword"
            android:textSize="18sp"

            />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>